chore: get details

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,11 +16,13 @@
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/no-useless-path-segments": "off",
+    "class-methods-use-this": "off",
     "array-callback-return": "off",
     "no-console": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/button-has-type": "off",
     "react/forbid-prop-types": "off",
+    "camelcase": "off",
     "react/require-default-props": "off",
     "no-plusplus": "off",
     "implicit-arrow-linebreak": "off",
